syntax = "proto3";
option go_package = "modules/library";

// Logic models
message Author {
  int64 ID = 1;
  string Name = 2;
  string Country = 3;
}

message Authors {
  repeated Author Authors = 1;
}

message Book {
  int64 ID = 1;
  string Title = 2;
  string AuthorId = 3;
  string Description =4;
}

message Books {
  repeated Book Books =1;
}

// Requests
message CUDAuthorRequest {
  string operation = 1;
  Author Author = 2;
}

message CUDBookRequest {
  string operation = 1;
  Book Book = 2;
}

message DefaultRequest {}

message IdRequest{
  int64 id = 1;
}

// Responses
message DefaultResponse {string result = 1;}
message GetAuthorResponse {string result = 1;}
message GetBookResponse {string result = 1;}

// Service handlers
service Library {
  // CUD == C-create, U-update, D-delete DataBase sql functionality
  rpc HandleAuthorCUD(CUDAuthorRequest) returns (DefaultResponse);
  rpc HandleBookCUD(CUDBookRequest) returns (DefaultResponse);

  // Get handlers
  rpc GetAllAuthors(DefaultRequest) returns (Authors);
  rpc GetAllBooks(DefaultRequest) returns (Books);

  rpc GetAuthorById(IdRequest) returns (Author);
  rpc GetBookById(IdRequest) returns (Book);

  rpc GetAuthorsByBookName(Book) returns (Authors);
  rpc GetBooksByAuthorId(IdRequest) returns (Books);
}